--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,8 @@ img {
 
 /* Style rules for mobile viewport */
 
+
+
 /* Hide tab-desk class */
 .tab-desk {
     display: none;
@@ -39,6 +41,10 @@ header {
 header h1 {
     font-family: 'DM Serif Display', serif;
     font-style: italic;
+    font-size: 1.5em;
+    padding: 4%;
+    margin-right: 15%;
+
 }
 
 /* Style rules for navigation area */
@@ -65,6 +71,27 @@ nav li a {
     text-decoration: none;
 }
 
+.mobile-nav a {
+  color: #fff;
+  text-align: center;
+  font-size: 2em;
+  text-decoration: none;
+  padding: 3%;
+  display: block;
+}
+
+.mobile-nav a.menu-icon {
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.menu-icon div {
+  height: 50px;
+  width: 50px;
+  background-color: #373684;
+}
 /* Style rules for main content */
 main {
     padding: 2%;
@@ -98,7 +125,7 @@ main p {
 }
 
 .round {
-    border-radius: 8px; 
+    border-radius: 8px;
 }
 
 aside {
@@ -119,7 +146,7 @@ figure {
 figcaption {
     position: absolute;
     bottom: 0;
-    background: rgba(55, 54, 132, 0.7); 
+    background: rgba(55, 54, 132, 0.7);
     color: #fff;
     width: 100%;
     padding: 5% 0;
@@ -191,7 +218,7 @@ tr:nth-child(odd) {
 }
 
 /* Style rules for form elements */
-fieldset, input  { 
+fieldset, input  {
     margin-bottom: 2%;
 }
 
@@ -227,8 +254,18 @@ footer a {
 
 /* Media Query for Tablet Viewport */
 @media screen and (min-width: 550px), print {
-    
+
+.mobile-nav {
+  display: none;
+}
     /* Tablet Viewport: Show tab-desk class, hide mobile class */
+
+header h1 {
+  margin: 0%;
+  padding: 0%;
+  font-size: 2em;
+}
+
     .tab-desk {
         display: block;
     }
@@ -236,12 +273,12 @@ footer a {
     .mobile {
         display: none;
     }
-    
+
     /* Tablet Viewport: Style rule for header content */
     span.tab-desk {
         display: inline;
     }
-    
+
     /* Tablet Viewport: Style rules for nav area */
     nav li {
         border-top: none;
@@ -249,108 +286,109 @@ footer a {
         border-right: 1px solid #e5e9fc;
         font-size: 1.5em;
     }
-    
+
     nav li:last-child {
         border-right: none;
     }
-    
+
     nav li a {
         padding: 0.25em 0.5em;
     }
-    
+
     .grid {
         display: grid;
         grid-template-columns: auto auto;
         grid-gap: 20px;
     }
-    
+
     aside {
         grid-column: 1 / span 2;
     }
-    
+
     /* Tablet Viewport: Style rule for map */
    .map {
         width: 500px;
         height: 450px;
     }
-    
+
     /* Tablet Viewport: Style rule for form element */
     form {
         width: 70%;
         margin: 0 auto;
     }
-    
+
 }
 
 /* Media Query for Desktop Viewport */
 @media screen and (min-width: 769px), print {
-    
+
     /* Desktop Viewport: Style rule for header */
     header {
         padding: 2%;
     }
-    
+
     /* Desktop Viewport: Style rules for nav area */
     nav li a {
         padding: 0.5em 1.5em;
     }
-    
+
     nav li a:hover {
         color: #373684;
         background-color: #e5e9fc;
+        transform: scale(1.3);
     }
-    
-    /* Desktop Viewport: Style Rules for main content */  
+
+    /* Desktop Viewport: Style Rules for main content */
     #info ul {
         margin-left: 5%;
     }
-    
+
     main h3 {
         font-size: 1.5em;
     }
-    
+
     #piano, #guitar, #violin {
         width: 29%;
         float: left;
         margin: 0 2%;
     }
-    
+
     .grid {
         grid-template-columns: auto auto auto auto;
     }
-    
+
     figcaption {
         font-size: 1em;
     }
-    
+
     aside {
         grid-column: 1 / span 4;
     }
-    
+
     /* Style rule for table */
     table {
         width: 70%;
     }
-    
+
     /* Desktop Viewport: Style rules for form elements */
     .form-grid {
         display: grid;
         grid-template-columns: auto auto;
-        grid-gap: 20px; 
+        grid-gap: 20px;
     }
-    
+
     .btn {
         grid-column: 1 / span 2;
     }
-    
+
 }
 
 /* Media Query for Print */
 @media print {
-    
+
     body {
         background-color: #fff;
         color: #000;
     }
-    
+
 }
